@@ -114,26 +114,6 @@ public class MailUtilities {
 	MimeBodyPart signedMbp = ((net.suberic.pooka.crypto.SignedAttachment) newAttach).getSignedPart();
 	
 	if (signedMbp != null) {
-	  /*
-	  String signedContentType = signedMbp.getContentType().toLowerCase();
-	  if (signedContentType.startsWith("multipart")) {
-	    bundle.addAll(parseAttachments((Multipart)signedMbp.getContent()));
-	  } else if (signedContentType.startsWith("message")) {
-	    bundle.addAttachment(new Attachment(signedMbp));
-	    Object msgContent;
-	    msgContent = signedMbp.getContent();
-	    
-	    if (msgContent instanceof Message)
-	      bundle.addAll(parseAttachments((Message)msgContent));
-	    else if (msgContent instanceof java.io.InputStream)
-	      bundle.addAll(parseAttachments(new MimeMessage(Pooka.getDefaultSession(), (java.io.InputStream)msgContent)));
-	    else
-	      System.out.println("Error:  unsupported Message Type:  " + msgContent.getClass().getName());
-	    
-	  } else {
-	    bundle.addAttachment(new Attachment(signedMbp));
-	  }
-	  */
 	  handlePart(signedMbp, bundle);
 	}
 	
