@@ -619,7 +619,7 @@ Pooka.crypto.privateKey.forSig=Select key to sign this message.
 Pooka.crypto.passphrase.title=Enter Passphrase
 Pooka.crypto.passphrase.message=Enter Passphrase for key \n
 
-Pooka.crypto.encryptedMessage=******  This is an encrypted message.  Click on the 'encryption' button or go to Encrypt->Decrypt message to read it. ******
+Pooka.crypto.encryptedMessage=******  This is an encrypted message.  ******\r\n\r\nClick on the 'encryption' button or go to Encrypt->Decrypt message to read it.
 Pooka.crypto.importKeysMessage=Import the following keys:
 Pooka.crypto.importKeysTitle=Import keys
 
@@ -841,7 +841,7 @@ ReadMessageWindow.keyBindings.C+F3.Action=message-find-next
 ReadMessageWindow.keyBindings.C+F3.Key=control F3
 ReadMessageWindow.keyBindings.C+E.Action=message-decrypt
 ReadMessageWindow.keyBindings.C+E.Key=control E
-ReadMessageWindow.keyBindings.C+I.Action=message-check-sign
+ReadMessageWindow.keyBindings.C+I.Action=message-check-signature
 ReadMessageWindow.keyBindings.C+I.Key=control I
 
 NewMessageWindow.keyBindings=A+1:A+2:A+I:A+R:C+S:C+T:A+U:C+E:C+I
